--- a/src/styless/drop.scss
+++ b/src/styless/drop.scss
@@ -24,11 +24,11 @@
 
 #barspres{
     position: relative;
-    left: 77.9vw;
-    top: 5vh;
+    left: 80vw;
+    top: 6vh;
     font-weight: bold;
     font-size: 22px;
-    
+    color: black;
 }
 
 
