--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -4,6 +4,7 @@ $myfont:  Roboto,Arial,system-ui;
 
 body{
   margin: 0;
+  
 }   
 
 #fondo{
@@ -182,7 +183,8 @@ body{
       display: inline-block;
       z-index: 5;
       left: 80vw;
-      font-size: 22px;
+      font-size: 23.2px;
+      color: black;
     }
   }
 
