--- a/src/styless/drop.css
+++ b/src/styless/drop.css
@@ -21,8 +21,9 @@
 
 #barspres {
   position: relative;
-  left: 77.9vw;
-  top: 5vh;
+  left: 80vw;
+  top: 6vh;
   font-weight: bold;
   font-size: 22px;
+  color: black;
 }/*# sourceMappingURL=drop.css.map */
