--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -16,42 +16,35 @@
     #aboutmede{
         font-family: Arial,system-ui;
         position: relative;
-        top: 38vh;
-        font-size: 20px;
+        top: 30vh;
+        font-size: 18px;
         color: dimgray;
-        margin: 0;
-        display: block;
-        margin: auto;
-        width: 54vw;
-        left: 6vw;
-        text-align: left;
+        text-align: center;
+        
     }
 }
 
 #heading{
-    width: 36vw;
-    display: block;
-    font-family: Roboto,system-ui,Arial;
+    font-family: Roboto, Arial, system-ui,;
     font-weight: bold;
-    font-size: 32px;
+    margin-bottom: 30px;
+    font-size: 38px;
     color: black;
     position: relative;
     top: 30vh;
-    left: 6vw;
-    margin: auto;
-    text-align: left;
-    width: 54vw;
+    text-align: center;
 }
 
 @media screen and (max-width: 1100px) {
     #heading{
         top: 18vh;
-        left: 3.7vh;
+        
     }
    #abcon{
        #aboutmemo{
-         display: block;
-         font-size: 20px;
+         display: inline-block;
+         text-align: center;
+         font-size: 18px;
          line-height: 28px;
        }
 
