bug fix(responsive design) about component

--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -20,7 +20,7 @@
         font-size: 18px;
         color: dimgray;
         text-align: center;
-        
+        left: -3vw;    
     }
 }
 
@@ -29,6 +29,7 @@
     font-weight: bold;
     margin-bottom: 30px;
     font-size: 32px;
+    left: -3vw;
     color: black;
     position: relative;
     top: 30vh;
