--- a/src/styless/about.css
+++ b/src/styless/about.css
@@ -8,36 +8,37 @@
   display: none;
   font-size: 20px;
   color: dimgray;
-  text-align: justify;
 }
 #abcon #aboutmede {
   font-family: Arial, system-ui;
   position: relative;
-  top: 34vh;
-  font-size: 20px;
+  top: 30vh;
+  font-size: 18px;
   color: dimgray;
   text-align: center;
+  left: -3vw;
 }
 
 #heading {
-  font-family: Roboto, system-ui, Arial;
+  font-family: Roboto, Arial, system-ui;
   font-weight: bold;
+  margin-bottom: 30px;
   font-size: 32px;
+  left: -3vw;
   color: black;
   position: relative;
   top: 30vh;
-  margin: auto;
   text-align: center;
 }
 
 @media screen and (max-width: 1100px) {
   #heading {
     top: 18vh;
-    left: 3.7vh;
   }
   #abcon #aboutmemo {
-    display: block;
-    font-size: 20px;
+    display: inline-block;
+    text-align: center;
+    font-size: 18px;
     line-height: 28px;
   }
   #abcon #aboutmede {
