--- a/src/styless/home.css
+++ b/src/styless/home.css
@@ -69,10 +69,6 @@
   border-radius: 100px;
   margin-bottom: 17vh;
 }
-#imacon #imle button:hover {
-  background-color: #30b069;
-  border: white;
-}
 #imacon #imrepa {
   display: inline-block;
   left: 8vw;
@@ -452,12 +448,28 @@ body {
   outline: none;
   width: 7.8vw;
   font-family: Roboto, Arial, system-ui;
+  overflow: hidden;
   border-radius: 100px;
+  z-index: 1;
   cursor: pointer;
 }
-#fondo button:hover {
+#fondo button:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
   background-color: #30b069;
+  transition: all 0.3s;
+  border-radius: 100px;
+  z-index: -1;
+}
+#fondo button:hover {
   color: black;
+}
+#fondo button:hover::before {
+  width: 100%;
 }
 
 body {
