minor design change

--- a/src/styless/_portfolio.scss
+++ b/src/styless/_portfolio.scss
@@ -63,6 +63,7 @@ $borderRadius: 11px;
             border-radius: $borderRadius;
             &:hover{
                 opacity: 0.5;
+                cursor: pointer;
             }
            
         }
