services and previews responsive design bugs are now fixed

--- a/src/styless/_skills.scss
+++ b/src/styless/_skills.scss
@@ -1,10 +1,15 @@
+
+//average desktop
 $animationDuration: 0.5s;
+$width: 20vw;
+$skill-height: 302.22px;
+$con-height: 229.95px;
 
 @mixin skillsq($bcolor, $fcolor,){
     background-color: $bcolor;
     color: $fcolor;
-    height: 46vh;
-    width: 20vw;
+    height: $skill-height;
+    width: $width;
     display: inline-block;
     margin-left: 3.5vw;
     top: 17vh;
@@ -23,7 +28,7 @@ $animationDuration: 0.5s;
 
     @keyframes moveres {
       from{top: 0vh; opacity: 0;}
-      to{top: 13.7vh; opacity: 1;}
+      to{top: 11vh; opacity: 1;}
     }
 
     @keyframes movefront {
@@ -35,14 +40,14 @@ $animationDuration: 0.5s;
      top: 0.3vh;
      color: $fontColor;
      font-family: Arial,system-ui ;
-     height: 35vh;
-     width: 20vw;
+     height: $con-height;
+     width: $width;
      font-size: 18px;
      background-color: transparent;
      border-radius: 5px;
      text-align: left;
      
-     line-height: 3.2vh;
+     line-height: 24px;
      font-weight: lighter;
      
     }
@@ -81,7 +86,26 @@ $animationDuration: 0.5s;
 }
 
 
-@media screen and (max-width: 1100px) {
+//big desktop
+@media screen and(min-width: 1700px){
+  
+ 
+  #ui{
+    height: 35vh;
+  }
+  
+  #front{
+    height: 35vh;
+  }
+
+  #res{
+    height: 35vh;
+  }
+}
+
+
+//mobile or tablet
+@media screen and (max-width: 1005px) {
   #ui{
    display: block;
    position: relative;
