--- a/src/styless/_portfolio.scss
+++ b/src/styless/_portfolio.scss
@@ -1,5 +1,6 @@
 $height: 33vw;
 $width: 68.4288vw;
+
 $borderRadius: 11px;
 
 
@@ -53,7 +54,6 @@ $borderRadius: 11px;
         }
 
 
-        
         img{
             height: $height;
             width: $width;
@@ -126,16 +126,108 @@ $borderRadius: 11px;
 
 }
 
+$colorverleft: 0px;
+
+
+//tablet  
 @media screen and (max-width: 1100px) {
+    #imacon{
+    
+        left: -15px;
+        #imle{
+            
+            animation: none;
+            button{
+                margin-bottom: 20px;
+                top: -18vh;
+                margin-left: 20px;
+                font-weight: bold;
+                &:hover{
+                    color: black;
+                    background-color: white;
+                }
+            }
+            
+            #coloroverMa{
+                height: 40vh;
+                width: 90vw;
+                left: $colorverleft;
+                
+            }
+    
+            #coloroverFr{
+                height: 40vh;
+                width: 90vw;
+                left: $colorverleft;
+            }
+    
+            #coloroverRe{
+                height: 40vh;
+                width: 90vw;
+                left: $colorverleft;
+            }
+    
+            img{
+                position: relative;
+                height: 40vh;
+                width: 90vw;
+                &:hover{
+                    opacity: 1;
+                }
+            }
+        }
+    
+        #imre{
+            transition: left 0s;
+            button{
+                margin-bottom: 20vh;
+                left: 95px;
+                margin-left: 20px;
+                top: 13.3vh;
+            }
+    
+            img{
+                position: relative;
+                height: 40vh;
+                
+                width: 90vw;
+                &:hover{
+                    opacity: 1;
+                }
+            }
+        }
+        
+       }
+    
+        #imlepa{
+            
+            display: block;
+            
+        }
+    
+        #imrepa{
+            margin-top: 6vh;
+            left: -37vw;
+            top: 130vh;
+            display: block;
+            
+        }
+    }
+    
+    
+
+//mobile
+@media screen and (max-width: 650px) {
 
    #imacon{
+    
+    left: -15px;
     #imle{
-        margin-left: 5vw;
+        
         animation: none;
         button{
-            margin-bottom: 20vh;
-            left: 95px;
-            top: 7.3vh;
+            margin-bottom: 20px;
+            top: -18vh;
             margin-left: 20px;
             font-weight: bold;
             &:hover{
@@ -143,9 +235,28 @@ $borderRadius: 11px;
                 background-color: white;
             }
         }
+        
+        #coloroverMa{
+            height: 40vh;
+            width: 97vw;
+            left: $colorverleft;
+            
+        }
+
+        #coloroverFr{
+            height: 40vh;
+            width: 97vw;
+            left: $colorverleft;
+        }
+
+        #coloroverRe{
+            height: 40vh;
+            width: 97vw;
+            left: $colorverleft;
+        }
+
         img{
             position: relative;
-            left: -30px;
             height: 40vh;
             width: 97vw;
             &:hover{
@@ -166,7 +277,7 @@ $borderRadius: 11px;
         img{
             position: relative;
             height: 40vh;
-            left: -30px;
+            
             width: 97vw;
             &:hover{
                 opacity: 1;
@@ -190,8 +301,6 @@ $borderRadius: 11px;
         
     }
 }
-
-
 
 
 
