--- a/src/styless/_portfolio.scss
+++ b/src/styless/_portfolio.scss
@@ -74,6 +74,26 @@ $borderRadius: 11px;
             background-color: white;
             border-radius: 100px;
             margin-bottom: 17vh;
+            
+
+            &:before {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 0%;
+                height: 100%;
+                background-color: #30b069;
+                transition: all 0.3s;
+                z-index: -1;
+                }
+                
+              &:hover{
+                
+                &::before{
+                  width: 100%;
+                }
+              }
         }
 
         
