dark mode desktop

--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -30,7 +30,7 @@
     margin-bottom: 30px;
     font-size: 32px;
     left: -1vw;
-    color: white;
+    color: var(--linksColor);
     position: relative;
     top: 30vh;
     text-align: center;
