--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -210,7 +210,7 @@ body{
 
   #fondo{
     #danielpa{
-     background-color: white;
+     background-color: var(--fondoColor);
      position: fixed;
      z-index: 5;
      padding-top: 10vh;
@@ -234,7 +234,7 @@ body{
       z-index: 5;
       left: 80vw;
       font-size: 23.2px;
-      color: black;
+      color: var(--linksColor);
     }
   }
 
@@ -245,7 +245,7 @@ body{
   
 
   body{
-    background-color: white;
+    background-color: var(--fondoColor);
   }
   
   #fondo{
@@ -269,8 +269,8 @@ body{
     button{
       width: 100px;
       margin-left: 0vw;
-      background-color: black;
-      color: white;
+      background-color:  var(--ContactButtonColor);
+      color: var(--ContactButtonFontColor);
     }
 
     
