--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -206,10 +206,15 @@ body{
   
 }
 
+#danielpa{
+  display: none;
+}
+
 @media screen and (max-width: 1100px) {
 
   #fondo{
     #danielpa{
+      display: block;
      background-color: var(--fondoColor);
      position: fixed;
      z-index: 5;
@@ -228,11 +233,16 @@ body{
       z-index: 5;
     }
 
+    #icon{
+      left: 52vw;
+      top: 0px;
+    }
+
     #bars{
       position: fixed;
       display: inline-block;
       z-index: 5;
-      left: 80vw;
+      left: 85vw;
       font-size: 23.2px;
       color: var(--linksColor);
     }
