nav bar positioning bug

--- a/src/styless/drop.css
+++ b/src/styless/drop.css
@@ -4,7 +4,7 @@
   overflow-x: hidden;
 }
 #dropcon #link {
-  color: black;
+  color: var(--linksColor);
   text-decoration: none;
   font-family: Roboto;
   font-size: 40px;
@@ -16,7 +16,7 @@
 }
 
 #daniel {
-  color: black;
+  color: var(--linksColor);
 }
 
 #barspres {
@@ -25,5 +25,5 @@
   top: 6vh;
   font-weight: bold;
   font-size: 22px;
-  color: black;
+  color: var(--linksColor);
 }/*# sourceMappingURL=drop.css.map */
