--- a/src/styless/pages/about.css
+++ b/src/styless/pages/about.css
@@ -1,3 +1,7 @@
+:root {
+  background-color: "";
+}
+
 #abcon {
   position: relative;
 }
@@ -20,7 +24,7 @@
 }
 
 #heading {
-  font-family: Roboto, Arial, system-ui;
+  font-family: Arial, system-ui;
   font-weight: bold;
   margin-bottom: 30px;
   font-size: 32px;
